force-app/main/default/objects/Usage_Metric__c/Usage_Metric__c.object-meta.xml
<CustomObject>
    <description>Per-tenant monthly metering.</description>
    <label>Usage Metric</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Usage Metric Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Usage Metrics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>