force-app/main/default/objects/Usage_Metric__c/fields/Active_Players__c.field-meta.xml
<CustomField>
    <fullName>Active_Players__c</fullName>
    <label>Active Players</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>