force-app/main/default/objects/Usage_Metric__c/fields/Games_Started__c.field-meta.xml
<CustomField>
    <fullName>Games_Started__c</fullName>
    <label>Games Started</label>
    <type>Number</type>
    <precision>9</precision>
    <scale>0</scale>
</CustomField>