force-app/main/default/objects/Usage_Metric__c/fields/LLM_Cost_USD__c.field-meta.xml
<CustomField>
    <fullName>LLM_Cost_USD__c</fullName>
    <label>LLM Cost USD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>