force-app/main/default/objects/Usage_Metric__c/fields/LLM_Tokens_In__c.field-meta.xml
<CustomField>
    <fullName>LLM_Tokens_In__c</fullName>
    <label>LLM Tokens In</label>
    <type>Number</type>
    <precision>12</precision>
    <scale>0</scale>
</CustomField>