force-app/main/default/objects/Usage_Metric__c/fields/Questions_Served__c.field-meta.xml
<CustomField>
    <fullName>Questions_Served__c</fullName>
    <label>Questions Served</label>
    <type>Number</type>
    <precision>12</precision>
    <scale>0</scale>
</CustomField>