force-app/main/default/objects/Usage_Metric__c/fields/Tenant__c.field-meta.xml
<CustomField>
    <fullName>Tenant__c</fullName>
    <label>Tenant</label>
    <type>Lookup</type>
    <required>true</required>
    <referenceTo>Tenant__c</referenceTo>
    <relationshipName>Usage_Metrics</relationshipName>
    <relationshipLabel>Tenant</relationshipLabel>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>